test/Harper/Tests/Bad/ConflictingVariantDeclarations_WithinOneType.har
value List a = {
  variant Empty = { };
  
  variant NonEmpty = {
    data = {
      head :: a;
    }
  };

  variant NonEmpty = {
    data = {
      head :: a;
      tail :: List a;
    }
  };
};

value Bag a b c d = {
  variant Bag = {
    data = {
      a :: a; a :: b; c :: c; c :: d;
    }
  };
};


main :: Integer;
main = 42;