test/Harper/Tests/Bad/ConflictingVariantDeclarations_WithinOneType.out
Error: conflicting type variant names `NonEmpty`.
Conflicting declarations:
value List a = {
  variant Empty = {
    } ;
  variant NonEmpty = {
    data = {
      head :: a ;
      }
    } ;
  variant NonEmpty = {
    data = {
      head :: a ;
      tail :: List a ;
      }
    } ;
  }

Located at line 1 column 1


Execution terminated with an error: type error.